--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build",
+    "export": "next build && next export",
     "deploy": "npm run build && gh-pages -d out"
   },
+
+  "homepage": "https://gustavonunesx.github.io/ATIEX-FRONT",
+
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
