--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next build && next export",
-    "deploy": "npm run build && gh-pages -d out"
+    "deploy": "npm run export && gh-pages -d out"
   },
 
   "homepage": "https://gustavonunesx.github.io/ATIEX-FRONT",
