--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export",
-    "deploy": "npm run export && gh-pages -d out"
+    "export": "next build",
+    "deploy": "npm run build && gh-pages -d out"
   },
 
   "homepage": "https://gustavonunesx.github.io/ATIEX-FRONT",
