--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:gh-pages": "set NEXT_PUBLIC_BASE_PATH=/ATIEX-FRONT&& next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build",
-    "deploy": "npm run build && gh-pages -d out"
+    "deploy": "npm run build:gh-pages && gh-pages -d out"
   },
-
   "homepage": "https://gustavonunesx.github.io/ATIEX-FRONT",
-
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
